# MIA

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.train  Dockerfile.web  Dockerfile.worker  Makefile  Prokct.md  README.md  TODO.md  alembic.ini  debai.md  docker-compose.prod.yml  docker-compose.yml  note.md  pyproject.toml  run.sh  streamlit_app.py
.github/workflows/: ci.yml  docker-build.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_meeting_participants.py  0003_add_transcript_to_meetings.py  0004_add_meeting_owner.py  0005_add_workers_table.py  0006_add_calendar_events.py  0007_add_transcript_artifacts.py
configs/: README.md  app.example.yml
data/: README.md  workers.json
data_pipeline/: DATA_PIPELINE_NOTES.md  collect.py  collect_interactions.py  export_for_finetuning.py  synthetic.py  synthetic_to_audio.py  tts_audio.py  tts_macos.py  validate.py
docker/: prometheus.yml
docker/grafana/provisioning/alerting/: rules.yaml
docker/grafana/provisioning/dashboards/: default.yaml  meeting-agent-overview.json
docker/nginx/: generate-certs.sh  nginx.conf
docker/nginx/certs/: server.crt  server.key
docker/pgadmin/: pgpass  servers.json
docs/: architecture.md  assignment-compliance.md  c4model.md  data-pipeline-notes.md  data-pipeline.md  doc.md  eval-results.md  gap-analysis.md  mainflow.md  mlops-runbook.md  monitoring-guide.md  note.md  planing.md  project-status.md  public-demo-deployment.md  require.md  source-audit-notes.md  understand-project.md
docs/final-report/: abstract.tex  appendix.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  main.tex  outline.md  references.tex  report-writing-plan.md  report.md
examples/: roster.json
models/: README.md
models/baseline-action-detector/: README.md  metadata.json  model.joblib
scripts/: backfill_transcript_turns.py  check_repo_hygiene.py  cleanup_artifacts.py  dataset_compat_smoke.py  deploy_promoted_model.py  prepare_hf_dataset.py  run_benchmark.py
seminar/: report.tex  slide.tex
seminar/slides/: 00_cover.md  02_vision.md  04_pipeline_detail.md  05_ai_stack.md  06_prompt_guardrails.md  09_monitoring_observability.md  10_feedback_continuous_improvement.md  11_evaluation_results.md  12_llmops_coverage.md  14_demo_output.md  README.md  scripts.md
slides/: 01_problem.md  03_system_overview.md  07_training_pipeline.md  08_data_pipeline.md  13_scalability_deployment.md  15_roadmap_conclusion.md
src/meeting_agent/: __init__.py  cli.py  config.py
src/meeting_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/meeting_agent/api/: auth.py  calendar_router.py  main.py  ws_router.py
src/meeting_agent/db/: __init__.py  engine.py  models.py  repository.py
src/meeting_agent/integrations/: google_calendar.py  token_store.py
src/meeting_agent/mlops/: __init__.py  ab_test.py  annotation_tool.py  data_contracts.py  dataset.py  dataset_version.py  distill.py  drift_detector.py  eval_report.py  evaluate.py  finetune.py  generate_eval_data.py  latency_report.py  retrain.py  train_baseline_detector.py
src/meeting_agent/mlops/data_pipeline/: __init__.py  collect.py  collect_interactions.py  export_for_finetuning.py  synthetic.py  synthetic_to_audio.py  tts_audio.py  tts_macos.py  validate.py
src/meeting_agent/monitoring/: __init__.py  anomaly.py  metrics.py  worker_metrics.py
src/meeting_agent/pipeline/: __init__.py  assignment.py  audio_buffer.py  cache.py  feedback.py  guardrails.py  ingest.py  orchestrator.py  pii.py  preprocess.py  rag.py  router.py  run.py  streaming_stt.py  stt.py  worker_registry.py  worker_task.py
src/meeting_agent/prompts/: __init__.py  templates.py
src/meeting_agent/schemas/: __init__.py  meeting.py  task.py  transcript.py  worker.py
tests/: conftest.py  test_ab_test.py  test_anomaly.py  test_api.py  test_api_auth.py  test_artifact_cleanup.py  test_assignment.py  test_cache.py  test_calendar_router.py  test_config.py  test_deploy_promoted_model.py  test_export.py  test_feedback.py  test_feedback_loop.py  test_guardrails.py  test_mlops_contracts.py  test_pii.py  test_prompt_builder.py  test_retrain_promotion.py  test_schemas.py  test_stt.py  test_token_store.py  test_train_baseline_detector.py
tests/fixtures/: sample_meeting.json
train/: ab_test.py  annotation_tool.py  dataset.py  dataset_version.py  distill.py  drift_detector.py  eval_report.py  evaluate.py  finetune.py  generate_eval_data.py  latency_report.py  retrain.py
web/: README.md  auth.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/backend/[...path]/: route.ts
web/app/api/calendar-sync/: route.ts
web/app/history/: page.tsx
web/app/lib/: http.ts
web/app/roster/: page.tsx
web/types/: next-auth.d.ts
