[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-agent"
version = "0.1.0"
description = "Meeting AI Agent — diarized transcript processing and action item extraction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # API & web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Schemas & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Audio preprocessing
    "ffmpeg-python>=0.2.0",
    "noisereduce>=3.0.2",
    "soundfile>=0.12.1",
    "librosa>=0.10.2",

    # ASR + Diarization
    "whisperx>=3.1.5",

    # LLM inference (Ollama client)
    "ollama>=0.2.1",

    # Embeddings / Vector store
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",

    # Task queue
    "celery>=5.4.0",
    "redis>=5.0.4",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",

    # Monitoring
    "prometheus-client>=0.20.0",
    "langsmith>=0.1.77",

    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
train = [
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "peft>=0.11.0",
    "trl>=0.9.0",
    "datasets>=2.19.0",
    "accelerate>=0.31.0",
    "bitsandbytes>=0.43.1",
    "unsloth>=2024.6",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
]

[project.scripts]
meeting-agent = "meeting_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
